--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="main-about">
                 <div class="main-about-content">
-                    <h1 class="main-about-title">Simple & pure design.</h1>
+                    <h1 class="main-about-title">Simple &amp; pure design.</h1>
                     <p class="main-about-subtitle">Designers everywhere gush with admiration upon seeing a web design and exclaim "its beautiful, it's so clean!". There are a countless number of webdesign round-ups dedicated to 'clean' design and it is a term thrown around quite a bit in the web design community. It can be easy to spot a good example of clean design.</p>
                 </div>
             </div>
@@ -70,43 +70,43 @@
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-1.png" class="main-works-pictures-picture-item" alt="bicycle at the wall">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-2.png" class="main-works-pictures-picture-item" alt="woman">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-3.png" class="main-works-pictures-picture-item" alt="mugs">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-4.png" class="main-works-pictures-picture-item" alt="mug">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-5.png" class="main-works-pictures-picture-item" alt="bicycle for kids">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                     <div class="main-works-pictures-picture">
                         <img src="src/images/image-6.png" class="main-works-pictures-picture-item" alt="bicycle at the wall at night">
                         <div class="main-works-pictures-picture-hover">
-                            <div class="main-works-pictures-picture-hover-zoom"><i href="" class="fa fa-search-plus hover-zoom"></i></div>
-                            <div class="main-works-pictures-picture-hover-link"><i href="" class="fa fa-link hover-link"></i></div>
+                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
+                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -124,11 +124,11 @@
                         <form class="main-subscribe-content-form">
                             <input placeholder="Full Name" class="main-subscribe-content-form-input" type="text" name="name" id="name" required>
                             <input  placeholder="E-Mail Address" class="main-subscribe-content-form-input" type="text" name="mail" id="mail" required>
-                            <textarea placeholder="Message" class="main-subscribe-content-form-text" type="text" name="text" id="text" required></textarea>
+                            <textarea placeholder="Message" class="main-subscribe-content-form-text" name="text" id="text" required></textarea>
                             <div class="main-subscribe-content-form-boxbutton">
                                 <div class="main-subscribe-content-form-boxbutton-checkboxtext">
                                     <input type="checkbox" class="main-subscribe-content-form-checkbox" name="checkbox" id="checkbox">
-                                    <label for="checkbox"><p class="main-subscribe-content-form-checkbox-text" >Subscribe Newsletter</p></label>
+                                    <label for="checkbox"  class="main-subscribe-content-form-checkbox-text">Subscribe Newsletter</label>
                                 </div>
                                 <button class="main-subscribe-content-form-button">Send</button>
                             </div>
