--- a/index.html
+++ b/index.html
@@ -1,153 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="bundle.js"></script>
+    <title>Document</title>
+</head>
+<body>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>3</title>
-        <script src="bundle.js"></script>
+        <img src="/src/pics/city.jpg" >
     </head>
-    <body class="body">
-        <div class="header">
-            <div class="header-content">
-                <div class="header-content-logo"></div>
-                <div class="header-content-name">
-                    <h1 class="header-content-name-text">strict</h1>
-                </div>
-            </div>
-        </div>
-        <div class="main">
-            <div class="main-top">
-                <div class="main-top-img"></div>
-                <div class="main-top-content">
-                    <h1 class="main-top-content-title">strict</h1>
-                    <div class="main-top-content-subtitle">
-                        <p class="main-top-content-subtitle-p">STRICT is a responsive theme with a a clean and minimal look.</p>
-                    </div>
-                    <div class="main-top-content-button">
-                        <a href="" class="main-top-content-button-link"><p class="main-top-content-button-link-p">Call to action</p></a>
-                    </div>
-                    <div class="main-top-content-pointer">
-                        <a href="" class="main-top-content-pointer-link"></a>
-                    </div>
-                </div>
-                
-            </div>
-            <div class="main-about">
-                <div class="main-about-content">
-                    <h1 class="main-about-title">Simple &amp; pure design.</h1>
-                    <p class="main-about-subtitle">Designers everywhere gush with admiration upon seeing a web design and exclaim "its beautiful, it's so clean!". There are a countless number of webdesign round-ups dedicated to 'clean' design and it is a term thrown around quite a bit in the web design community. It can be easy to spot a good example of clean design.</p>
-                </div>
-            </div>
-            <div class="main-features">
-                <div class="main-features-items">
-                    <div class="main-features-items-feature">
-                        <div class="main-features-items-feature-picture1"></div>
-                        <div class="main-features-items-feature-title">Optimized for all devices</div>
-                        <div class="main-features-items-feature-text">STRICT has been designed to be fully 
-                                responsive on all devices</div>
-                    </div>
-                    <div class="main-features-items-feature">
-                        <div class="main-features-items-feature-picture2"></div>
-                        <div class="main-features-items-feature-title">Clean & Minimal Design</div>
-                        <div class="main-features-items-feature-text">This multipurpose theme is especially created 
-                                to be used for different projects.</div>
-                    </div>
-                    <div class="main-features-items-feature">
-                        <div class="main-features-items-feature-picture3"></div>
-                        <div class="main-features-items-feature-title">Font Awesome Icon</div>
-                        <div class="main-features-items-feature-text">This multipurpose theme is especially created 
-                                to be used for different projects.</div>
-                    </div>
-                </div>
-            </div>
-            <div class="main-works">
-                <div class="main-works-header">
-                    <div class="main-works-header-title">Showcase your work like a pro.</div>
-                    <div class="main-works-header-subtitle">Contact me if you like my work</div>
-                </div>
-                <div class="main-works-pictures">
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-1.png" class="main-works-pictures-picture-item" alt="bicycle at the wall">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-2.png" class="main-works-pictures-picture-item" alt="woman">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-3.png" class="main-works-pictures-picture-item" alt="mugs">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-4.png" class="main-works-pictures-picture-item" alt="mug">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-5.png" class="main-works-pictures-picture-item" alt="bicycle for kids">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i  class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i  class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="main-works-pictures-picture">
-                        <img src="src/images/image-6.png" class="main-works-pictures-picture-item" alt="bicycle at the wall at night">
-                        <div class="main-works-pictures-picture-hover">
-                            <a class="main-works-pictures-picture-hover-zoom" href=""><i class="fa fa-search-plus hover-zoom"></i></a>
-                            <a class="main-works-pictures-picture-hover-link" href=""><i class="fa fa-link hover-link"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main-subscribe">
-                <div class="main-subscribe-content">
-                    <img src="src/pics/stay-with-us-pic.png" alt="Road" class="main-subscribe-content-img">
-                    <img src="src/pics/stay-with-us-mask.png" alt="Road" class="main-subscribe-content-img-mask">
-                    <div class="main-subscribe-content-header">
-                        <h1 class="main-subscribe-content-header-title">Stay with us</h1>
-                        <p class="main-subscribe-content-header-subtitle">We ensure quailty & support</p>
-                        
-                    </div>
-                    <div class="main-subscribe-content-formarea">
-                        <form class="main-subscribe-content-form">
-                            <input placeholder="Full Name" class="main-subscribe-content-form-input" type="text" name="name" id="name" required>
-                            <input  placeholder="E-Mail Address" class="main-subscribe-content-form-input" type="text" name="mail" id="mail" required>
-                            <textarea placeholder="Message" class="main-subscribe-content-form-text" name="text" id="text" required></textarea>
-                            <div class="main-subscribe-content-form-boxbutton">
-                                <div class="main-subscribe-content-form-boxbutton-checkboxtext">
-                                    <input type="checkbox" class="main-subscribe-content-form-checkbox" name="checkbox" id="checkbox">
-                                    <label for="checkbox"  class="main-subscribe-content-form-checkbox-text">Subscribe Newsletter</label>
-                                </div>
-                                <button class="main-subscribe-content-form-button">Send</button>
-                            </div>
-                        </form>
-                    </div>  
-                </div>
-            </div>
-        </div>
-        <footer class="footer" >
-            <div class="footer-area">
-                <p class="footer-area-rights">Copyritht 2014, STRICT</p>
-                <div class="footer-area-socials">
-                    <div class="footer-area-socials-facebook"><i class="footer-area-socials-icon fa fa-facebook "></i></div>
-                    <div class="footer-area-socials-twitter"><i class="footer-area-socials-icon fa fa-twitter"></i></div>
-                    <div class="footer-area-socials-google"><i class="footer-area-socials-icon fa fa-google-plus"></i></div>
-                    <div class="footer-area-socials-linkedin"><i class="footer-area-socials-icon fa fa-linkedin"></i></div>
-                </div>
-
-            </div>
-        </footer>
-    </body>
+</body>
 </html>
